Skeleton some HTML classes and JavaScript

--- a/_layouts/episode.html
+++ b/_layouts/episode.html
@@ -2,9 +2,11 @@
 layout: default
 ---
 
-Transcript:
-<ul>
-  {% for line in page.transcript %}
-    <li data-line="{{ forloop.index }}">{{ line }}</li>
-  {% endfor %}
-</ul>
+<div class="page-episode">
+  Transcript:
+  <ul>
+    {% for line in page.transcript %}
+      <li data-line="{{ forloop.index }}">{{ line }}</li>
+    {% endfor %}
+  </ul>
+</div>
