--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <script src="/js/main.js"></script>
+  </head>
   <body>
-    <main class="content">
+    <main class="layout-content">
       {{ content }}
     </main>
   </body>
