--- a/templates/layout_header.gohtml
+++ b/templates/layout_header.gohtml
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.11/lodash.min.js" integrity="sha256-7/yoZS3548fXSRXqc/xYzjsmuW3sFKzuvOCHd06Pmps=" crossorigin="anonymous"></script>
+    <link href="/stylesheets/styles.css" rel="stylesheet" media="screen" />
   </head>
   <body>
+    <div class="layout-header">
+      <h1><span class="whm">WHM</span>Index</h1>
+    </div>
     <main class="layout-content">
       <div class="search-container">
         <form>
-          <input type="search" />
+          <input type="search" placeholder="Search..." />
         </form>
       </div>
-    </main>
