--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -46,3 +46,16 @@ body {
   box-sizing: border-box;
   width: 100%;
 }
+.search-container .results {
+  border: 1px solid #eee;
+  border-top: none;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.search-container .results ul {
+  margin: 0;
+  padding: 8px 8px 0 24px;
+}
+.search-container .results .all-results {
+  padding: 8px;
+}
