Add basic search results page

--- a/templates/layout_header.gohtml
+++ b/templates/layout_header.gohtml
@@ -10,7 +10,7 @@
     </div>
     <main class="layout-content">
       <div class="search-container">
-        <form>
-          <input type="search" placeholder="Search..." />
+        <form action="/search" method="get">
+          <input name="query" type="search" placeholder="Search..." />
         </form>
       </div>
