--- a/templates/layout_header.gohtml
+++ b/templates/layout_header.gohtml
@@ -6,7 +6,11 @@
   </head>
   <body>
     <div class="layout-header">
-      <h1><span class="whm">WHM</span>Index</h1>
+      <h1>
+        <a href="/">
+          <span class="whm">WHM</span>Index
+        </a>
+      </h1>
     </div>
     <main class="layout-content">
       <div class="search-container">
