Add footer with licenses

--- a/templates/layout_footer.gohtml
+++ b/templates/layout_footer.gohtml
@@ -1,4 +1,23 @@
     </main>
+    <div class="layout-footer">
+      <h5>
+        Content
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+          <img alt="Creative Commons License" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
+        </a>
+      </h5>
+      <p>
+        The transcripts and other content of this site is licensed under the
+        <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-SA</a>
+        license.
+      </p>
+      <h5>Code</h5>
+      <p>
+        The source code of this site is licensed under the
+        <a rel="license" href="https://opensource.org/licenses/MIT">MIT</a>
+        license.
+      </p>
+    </div>
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
