--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -10,7 +10,8 @@ body {
 }
 
 .layout-content,
-.layout-header {
+.layout-header,
+.layout-footer {
   max-width: 560px;
   margin: 0 auto;
 }
@@ -37,11 +38,34 @@ body {
   background: #fff;
 }
 
+.layout-footer {
+  padding-top: 24px;
+  color: #ccc;
+}
+.layout-footer a {
+  color: inherit;
+}
+.layout-footer h5 {
+  margin: 16px 0;
+  font-size: 14px;
+}
+.layout-footer h5 img {
+  vertical-align: top;
+  margin-left: 4px;
+}
+
 .page-episode,
 .page-index,
 .page-search,
 .search-container {
   padding: 16px;
+}
+
+.page-index .colophon {
+  margin-bottom: 32px;
+}
+.page-index .colophon p:first-child {
+  margin-top: 0;
 }
 
 .search-container {
