Add colophon to the index page

--- a/templates/index.gohtml
+++ b/templates/index.gohtml
@@ -1,6 +1,20 @@
 {{template "layout_header.gohtml"}}
 
 <div class="page-index">
+  <div class="colophon">
+    <p>
+      This is a fan project to provide a searchable index of transcriptions of
+      the <a href="http://www.whmpodcast.com/">We Hate Movies</a> (WHM)
+      podcast's public catalog.
+    </p>
+    <p>
+      I hope this site is useful to other fans of the show. Please consider
+      <a href="http://www.patreon.com/wehatemovies">signing up for their
+      Patreon</a>: it supports Andrew, Stephen, Eric, and Chris so that they
+      can continue doing the show.
+    </p>
+  </div>
+  <h3>Episodes</h3>
   <ul>
     {{range .Episodes}}
       <li>
